--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,9 +1,14 @@
-name: Deploy website
+name: Deploy Website
 on:
   push:
     branches:
-      - main
+      - master
+  workflow_dispatch:
+    branches:
+      - master
+
 jobs:
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -11,10 +16,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
-      - name: Lint code
+      - name: Run Lint Code
         run: npm run lint
       - name: Test code
         run: npm run test
+
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -25,9 +31,11 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy
-        run: echo "Deploying..."
+      - name: Deploy website
+        run : |
+          echo "Deploying..."
