--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -35,7 +35,11 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
 
-
+      - name: Restore Cached Dependencies
+        uses: actions/cache@v3
+        with:
+          restore-keys: |
+            deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Build website
