--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Restore Cached Dependencies
         uses: actions/cache@v3
         with:
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
